--- a/Back-End/tsconfig.json
+++ b/Back-End/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "moduleResolution": "node",
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "testConnection.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
